--- a/back/views/index.hbs
+++ b/back/views/index.hbs
@@ -2,11 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevSecOps</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   </head>
   <body>
-    <section class="w-screen h-screen flex justify-center items-center">
+    <section class="w-screen h-screen flex justify-center items-center p-4">
       <form action="/send" method="post" class="flex flex-col items-center">
           <label for="firstname" class="relative w-full mb-3 block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
             <input type="text" name="firstname" placeholder="Prénom" class="peer w-full py-2 px-4 border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0" required />
@@ -18,7 +19,7 @@
             <span class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs">Nom</span>
           </label>
 
-          <div class="flex gap-3 mb-5">
+          <div class="flex flex-col md:flex-row gap-3 mb-5">
               <label for="email" class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
                   <input type="email" name="email" placeholder="Email" class="peer w-full py-2 px-4 border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0" required />
                   <span class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs">Email</span>
